[gd_scene load_steps=10 format=3 uid="uid://dfa1ds6dr13jr"]

[ext_resource type="FontFile" uid="uid://dppr83sl30x4e" path="res://assets/Font/Kenney Future.ttf" id="1_5p8wc"]
[ext_resource type="Script" uid="uid://b61un3ooweg83" path="res://scripts/settings.gd" id="1_r6d6q"]
[ext_resource type="Theme" uid="uid://dsw63j6va7usr" path="res://assets/ui_theme.tres" id="3_6wm04"]
[ext_resource type="Texture2D" uid="uid://c3e8g84bxol83" path="res://assets/ui/UI_spritesheet.png" id="3_f4mfi"]
[ext_resource type="Script" uid="uid://cndkd51n2ofdf" path="res://scripts/ui_texture_button.gd" id="4_es4n0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6wm04"]
bg_color = Color(0.0509804, 0.0509804, 0.117647, 0.588235)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="AtlasTexture" id="AtlasTexture_es4n0"]
atlas = ExtResource("3_f4mfi")
region = Rect2(60, 68, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4mfi"]
atlas = ExtResource("3_f4mfi")
region = Rect2(104, 140, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gis3k"]
atlas = ExtResource("3_f4mfi")
region = Rect2(68, 140, 32, 32)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r6d6q")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 256
theme_override_constants/margin_top = 96
theme_override_constants/margin_right = 256
theme_override_constants/margin_bottom = 96

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6wm04")

[node name="LabelMargin" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_top = 24

[node name="Label" type="Label" parent="MarginContainer/LabelMargin"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_5p8wc")
theme_override_font_sizes/font_size = 36
text = "SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseMargin" type="MarginContainer" parent="MarginContainer/LabelMargin"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/margin_right = 24

[node name="CloseBtn" type="TextureButton" parent="MarginContainer/LabelMargin/CloseMargin"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_es4n0")
stretch_mode = 4
script = ExtResource("4_es4n0")

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(384, 0)
layout_mode = 2
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Music" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_5p8wc")
text = "Music"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_6wm04")
max_value = 1.0
step = 0.001
value = 1.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="SFX" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_5p8wc")
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_6wm04")
max_value = 1.0
step = 0.001
value = 1.0

[node name="HSeparator" type="HSeparator" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="MobileControl" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_5p8wc")
text = "Force mobile controls"

[node name="Control" type="Control" parent="MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckBox" type="CheckBox" parent="MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
theme_override_icons/checked = SubResource("AtlasTexture_f4mfi")
theme_override_icons/unchecked = SubResource("AtlasTexture_gis3k")

[connection signal="value_changed" from="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="drag_ended" from="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer2/SFXSlider" to="." method="_on_sfx_slider_drag_ended"]
[connection signal="value_changed" from="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer2/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
